# corrdim

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml  setup.py
corrdim/: __init__.py  calculator.py  cli.py  dimension.py  high_level.py  low_level.py  models.py  types.py  utils.py
corrdim/corrint/: __init__.py  _corrint_pytorch.py  _corrint_triton.py  cuda.py  cuda_extension.py  pytorch.py  triton.py
corrdim/corrint/ext/: corrdim_cuda.cpp  corrdim_cuda_kernel.cu
data/sep60/: aesthetics-18th-german.txt  africana.txt  al-farabi-metaphysics.txt  attention.txt  buddhism-tiantai.txt  chance-randomness.txt  chaos.txt  computational-complexity.txt  computational-linguistics.txt  connectives-logic.txt  consciousness-intentionality.txt  consciousness-temporal.txt  cosmological-argument.txt  descartes-epistemology.txt  dynamic-epistemic.txt  early-modern-india.txt  egalitarianism.txt  epistemic-game.txt  epistemology-bayesian.txt  ethics-chinese.txt  evil.txt  formal-belief.txt  game-theory.txt  gasset.txt  habermas.txt  heidegger-aesthetics.txt  heidegger.txt  idealism.txt  infinity.txt  information.txt  innateness-language.txt  levinas.txt  linguistics.txt  logic-inductive.txt  logic-temporal.txt  logics-for-games.txt  margaret-cavendish.txt  mereology.txt  mill-moral-political.txt  mohist-canons.txt  (+20 more)
docs/: cli.md  concepts.md  conf.py  examples.md  index.md  installation.md  quickstart.md  requirements.txt
docs/api/: cli.rst  corrdim.rst  corrint.rst  dimension.rst  high_level.rst  index.rst  low_level.rst  models.rst  types.rst  utils.rst
examples/: basic_usage.ipynb  basic_usage.py
paper/: neurips2025.txt
tests/: __init__.py  test_api_surface.py  test_backend_consistency.py  test_core.py  test_corrint_backend_more.py  test_corrint_pytorch_backend.py  test_corrint_triton_batch.py  test_corrint_triton_batch_slices.py  test_corrint_triton_progressive.py  test_cuda_fallback_warning.py  test_dimension_more.py  test_edge_cases.py  test_high_level_more.py  test_low_level_more.py  test_utils_more.py
