[project]
name = "corrdim"
version = "0.2.5"
description = "Correlation Dimension for LLMs - A library for computing correlation dimension of autoregressive large language models"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "kduxin", email = "duxin@tongji.edu.cn"}
]
keywords = [
    "correlation-dimension",
    "language-models",
    "fractal-geometry",
    "nlp",
    "machine-learning",
    "natural-language-processing",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy>=1.21.0",
    "ninja>=1.11.0",
    "torch>=2.0.0",
    "setuptools>=68.0.0",
    "transformers>=4.30.0",
    "accelerate>=0.21.0",
    "scikit-learn>=1.0.0",
    "tqdm>=4.62.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "ipykernel>=6.0.0",
    "matplotlib>=3.10.6",
]
docs = [
    "sphinx>=5.3.0",
    "sphinx-rtd-theme>=1.2.0",
    "myst-parser>=0.16.1",
]
demo = [
    "streamlit>=1.51.0",
]
# CUDA 12.1 torch + triton (Linux only)
triton = [
    "torch",
    "triton>=3.5.0; sys_platform == 'linux'",
]
# CUDA 12.1 torch without triton (Linux only)
cuda = [
    "torch",
]

[project.urls]
Homepage = "https://github.com/kduxin/corrdim"
Repository = "https://github.com/kduxin/corrdim"
Documentation = "https://corrdim.readthedocs.io"
"Bug Tracker" = "https://github.com/kduxin/corrdim/issues"

[project.scripts]
corrdim = "corrdim.cli:main"

[build-system]
requires = ["setuptools>=68.0.0", "wheel", "torch>=2.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["corrdim*"]

[tool.setuptools.package-data]
"corrdim.corrint.ext" = ["*.cpp", "*.cu", "*.cuh", "*.h"]

[tool.black]
line-length = 120
target-version = ['py310', 'py311', 'py312', 'py313', 'py314']

[tool.isort]
profile = "black"
line_length = 120

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

# ── uv-specific configuration ────────────────────────────────────────────────
#
# PyPI publishes CPU-only torch wheels for Linux.  To get CUDA support,
# use the PyTorch CUDA 12.1 wheel index.  cu121 is forward-compatible
# with CUDA >= 12.1.
#
# Due to uv's cross-platform lockfile, the CUDA index CANNOT be active by
# default — it has no macOS wheels and would break `uv sync` on macOS.
#
# ── On a Linux machine with NVIDIA GPU ──────────────────────────────────────
#
# Option A: CLI flag (one-time)
#   uv sync --extra triton --index-url torch=https://download.pytorch.org/whl/cu121
#   uv sync --extra cuda   --index-url torch=https://download.pytorch.org/whl/cu121
#
# Option B: Uncomment the block below, then `uv sync --extra triton` or
#           `uv sync --extra cuda`
#
# [[tool.uv.index]]
# name = "pytorch-cu121"
# url = "https://download.pytorch.org/whl/cu121"
# explicit = true
#
# [tool.uv.sources]
# torch = [
#     { index = "pytorch-cu121", extra = "cuda" },
#     { index = "pytorch-cu121", extra = "triton" },
# ]

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true
