[project]
name = "corrdim"
version = "0.3.0"
description = "Correlation Dimension for LLMs - A library for computing correlation dimension of autoregressive large language models"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "kduxin", email = "duxin@tongji.edu.cn"}
]
keywords = [
    "correlation-dimension",
    "language-models",
    "fractal-geometry",
    "nlp",
    "machine-learning",
    "natural-language-processing",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy>=1.21.0",
    "ninja>=1.11.0",
    "torch>=2.3.0",
    "setuptools>=68.0.0",
    "transformers>=4.30.0",
    "accelerate>=0.21.0",
    "scikit-learn>=1.0.0",
    "tqdm>=4.62.0",
    "ipython>=8.39.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "ipykernel>=6.0.0",
    "matplotlib>=3.10.6",
]
docs = [
    "sphinx>=5.3.0",
    "sphinx-rtd-theme>=1.2.0",
    "myst-parser>=0.16.1",
]
demo = [
    "streamlit>=1.51.0",
]

[project.urls]
Homepage = "https://github.com/kduxin/corrdim"
Repository = "https://github.com/kduxin/corrdim"
Documentation = "https://corrdim.readthedocs.io"
"Bug Tracker" = "https://github.com/kduxin/corrdim/issues"

[project.scripts]
corrdim = "corrdim.cli:main"

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["corrdim*"]

[tool.setuptools.package-data]
"corrdim.corrint.ext" = ["*.cpp", "*.cu", "*.cuh", "*.h"]

[tool.black]
line-length = 120
target-version = ['py310', 'py311', 'py312', 'py313', 'py314']

[tool.isort]
profile = "black"
line_length = 120

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

# ── uv-specific configuration ────────────────────────────────────────────────
# On Linux, torch is resolved from the PyTorch CUDA 13.0 index (x86_64 & aarch64).
# On macOS / other platforms, torch falls back to PyPI.
# cu130 wheels are forward-compatible with CUDA >= 13.0.

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu130", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true
